add telegram post sender + refactoring

--- a/src/test/resources/siteFirstPage.html
+++ b/src/test/resources/siteFirstPage.html
@@ -6,7 +6,7 @@
 
     <title>Семейка Веселушек</title>
 
-    <!-- This site is optimized with the Yoast SEO plugin v6.0 - https://yoast.com/wordpress/plugins/seo/ -->
+    <!-- This site id optimized with the Yoast SEO plugin v6.0 - https://yoast.com/wordpress/plugins/seo/ -->
     <meta name="description" content="Веселое и полезное для всей семьи"/>
     <link rel="canonical" href="http://veselushki.top/page/2/" />
     <link rel="prev" href="http://veselushki.top/" />
